@@ -1,5 +1,4 @@
-package pt.up.fe.comp2023.jasmin;
-
+package pt.up.fe.comp2023;
 import org.specs.comp.ollir.ClassUnit;
 import org.specs.comp.ollir.OllirErrorException;
 import pt.up.fe.comp.jmm.jasmin.JasminBackend;
@@ -9,9 +8,11 @@ import pt.up.fe.comp.jmm.report.Report;
 import pt.up.fe.comp.jmm.report.Stage;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
-public class BackendStage implements JasminBackend {
+public class JasminBackEnd implements JasminBackend {
+
     @Override
     public JasminResult toJasmin(OllirResult ollirResult) {
         ClassUnit ollirClass = ollirResult.getOllirClass();
@@ -22,12 +23,12 @@ public class BackendStage implements JasminBackend {
             ollirClass.buildVarTables();
             ollirClass.show();
 
-            String JasminCode = new JasminGenerator(ollirClass).dealWithClass();
+            String CodeofJasmin = new JasminGenerator(ollirClass).dealWithClass();
 
             List<Report> reports = new ArrayList<>();
-            return new JasminResult(ollirResult, JasminCode, reports);
+            return new JasminResult(ollirResult, CodeofJasmin, reports);
         } catch (OllirErrorException f){
-            return new JasminResult(ollirClass.getClassName(), null, List.of(Report.newError(Stage.GENERATION, -1, -1,
+            return new JasminResult(ollirClass.getClassName(), null, Arrays.asList(Report.newError(Stage.GENERATION, -1, -1,
                     "Expection during Jasmin Generator", f)));
         }
     }
